fix(stream): addon label overflow

--- a/src/routes/MetaDetails/StreamsList/Stream/styles.less
+++ b/src/routes/MetaDetails/StreamsList/Stream/styles.less
@@ -58,7 +58,7 @@
 
         .addon-name {
             width: 7rem;
-            max-height: 3.6em;
+            max-height:4em;
             font-size: 1.1rem;
             text-align: left;
             color: var(--primary-foreground-color);
